examples/errors/syntax_invalid_value_keep.jc
// ================================================
// ERROR: Invalid Value in Keep
// Expected: [SyntaxError] Invalid value type in 'keep' statement
// ================================================

// Trying to assign an invalid value type
keep x = +;
